# meta_management_executables

./: .gitignore  Cargo.toml  LICENSE  README.md  metadata.json  plugin_data.json
scripts/: AntiPopup.sh  BetonQuest.sh  BungeeTabListPlusBukkit.sh  BungeeTabListPlusProxy.sh  Citizens.sh  DynaTech.sh  FastAsyncWorldEdit.sh  InteractiveChat.sh  InteractiveChatDiscordSRV.sh  LuckPermsBungee.sh  NexEngine.sh  ProtocolLib.sh  Squaremap.sh  SquaremapGriefPrevention.sh  WorldGuard.sh  blob.sh  paper.sh  spiget.sh  waterfall.sh
src/: commands.rs  deploy.rs  main.rs  messages.rs  metadata.rs  plugin_data.rs  update.rs
src/commands/: deploy.rs  integrity.rs  link.rs  list.rs  unlink.rs  update.rs  verify.rs
