[package]
name = "meta_management_executables"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
colored = "2.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

